[package]
name = "substrate-test-utils"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate test utilities"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.16"
tokio = { version = "1.22.0", features = ["macros", "time"] }
substrate-test-utils-derive = { version = "0.10.0-dev", path = "./derive" }

[dev-dependencies]
trybuild = { version = "1.0.53", features = [ "diff" ] }
sc-service = { version = "0.10.0-dev", path = "../client/service" }
