[package]
name = "polkadot-types"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]

[dependencies]
crunchy = "0.1.5"
uint = { git = "https://github.com/paritytech/primitives.git" }
fixed-hash = { git = "https://github.com/paritytech/primitives.git" }

[features]
default = ["std"]
std = ["uint/std", "fixed-hash/std"]
