[package]
name = "sc-allocator"
license = "Apache-2.0"
description = "Collection of allocator implementations."
documentation = "https://docs.rs/sc-allocator"
readme = "README.md"
authors.workspace = true
edition.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4.17"
thiserror = "1.0.30"
sp-core = { path = "../../primitives/core" }
sp-wasm-interface = { path = "../../primitives/wasm-interface" }
